add update category method
